# Classification

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt  Classification.h  Object.h  TestClasses.h
src/: CMakeLists.txt  Classification.cpp  Object.cpp
test/: CMakeLists.txt  TestClasses.cpp  TestSuite.cpp
